[package]
name = "egui_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
hello_egui = { version = "0.5" , features = ["all"] }

[dependencies.eframe]
version = "0.28"
default-features = false
features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
]

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"