[package]
name = "dnd"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
hello_egui = { git = "https://github.com/tpstevens/hello_egui.git", branch = "pub_item_iterator", features = ["all"] }

[dependencies.eframe]
version = "0.28"
default-features = false
features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
]
